Fixed shared element layout shift bug

--- a/src/css/Transition.css
+++ b/src/css/Transition.css
@@ -109,10 +109,6 @@ html, body {
 .screen-content {
   overflow: scroll;
 }
-.shared-element {
-  width: 100%;
-  height: 100%;
-}
 #ghost-layer {
   position: absolute;
   z-index: 100000;
